--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.14.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
