--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
