--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-cookie": "^7.2.2",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-kakao-login": "^2.1.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
